--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.5.4'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '2.5.5'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'war'
 	id 'org.sonarqube' version '3.3'
@@ -26,9 +26,9 @@ test {
 }
 
 
-sonarqube {
-    properties {
-        property 'sonar.host.url', 'http://34.125.201.58:9000'
-        property 'sonar.login', '******'
-    }
-}
+// sonarqube {
+//     properties {
+//         property 'sonar.host.url', 'http://34.125.201.58:9000'
+//         property 'sonar.login', '******'
+//     }
+// }
